# SD3D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
build_scripts/: compile_shaders.py
devres/res/: light.fbx
devres/res/shaders/: light.frag  lit.frag  lit.vert
devres/shaders/: lit.frag
res/models/: monkey.fbx
res/shaders/: frag.glsl
res/shaders/builtin/: generic.frag  generic.vert
src/: main.cpp
src/controls/: GeneralInputHandler.cpp  GeneralInputHandler.h  GeneralInputHandler.hpp  InputHandler.cpp  InputHandler.h  InputHandler.hpp  OrbitCameraController.cpp  OrbitCameraController.h  OrbitCameraController.hpp
src/graphics/: Camera.h  GlContext.cpp  GlContext.h  GlContext.hpp  ImGuiHandler.cpp  ImGuiHandler.h  ImGuiHandler.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/graphics/data/: AsyncGlMesh.cpp  AsyncGlMesh.h  AsyncGlMesh.hpp  AsyncModel.cpp  AsyncModel.h  AsyncModel.hpp  DataLayout.cpp  DataLayout.h  GlMesh.cpp  GlMesh.h  GlMesh.hpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture.hpp
src/graphics/data/detail/: AssimpNode.cpp  AssimpNode.h  AsyncAssimpNode.cpp  AsyncAssimpNode.h  AsyncAssimpNode.hpp  assimp_helpers.cpp  assimp_helpers.h  assimp_helpers.hpp
src/graphics/memory/: gl_memory.cpp  gl_memory.h  gl_memory.hpp  gl_memory_helpers.h  gl_memory_helpers.hpp
src/graphics/shaders/: ColorShader.cpp  ColorShader.h  ColorShader.hpp  LitShader.cpp  LitShader.h  LitShader.hpp  Shader.cpp  Shader.h  Shader.hpp  ShaderHandle.hpp  TransformShader.cpp  TransformShader.h  TransformShader.hpp
src/graphics/shaders/builtin/: builtin_shaders.h  builtin_shaders.hpp
src/graphics/shaders/builtin/src/: color.frag  color.vert  error.frag  error.vert  lit.frag  lit.vert
src/include/: version.h.in
src/io/: FileOpenDialog.cpp  FileOpenDialog.h
src/misc/: teapot.h
src/models/: cube.h  primitives.h  primitives.hpp  teapot.h
src/objects/: Transform.cpp  Transform.hpp
